# pytube-downloader

./: .gitignore  .travis.yml  Dockerfile  Procfile  README.md  README.rst  docker-compose.yaml  pyproject.toml  requirements.txt
src/: run.py
src/configuration/: __init__.py
src/controllers/: __init__.py  routes.py
src/resources/css/: styles.css
src/resources/html/: index.html
src/resources/js/: script.js
src/services/: __init__.py  facade_yt_dl.py  telegram_bot.py  video_manager.py
