[tool.poetry]
name = "pytube-downloader"
version = "0.1.0"
description = "Carlos Neto <carlos.neto.dev@gmail.com>"
authors = ["Carlos Neto <carlos.neto.dev@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
fastapi = "^0.63.0"
youtube_dl = "^2021.2.10"
uvicorn = "^0.13.3"
loguru = "^0.5.3"
aiofiles = "^0.6.0"
python-telegram-bot = "^13.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
